[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nvrecall"
version = "0.1.0"
requires-python = ">= 3.14"
authors = "gcrtnst"
license = "Unlicense"
license-files = "LICENSE"
keywords = ["niconico", "nicovideo"]

[project.urls]
source = "https://github.com/gcrtnst/nvrecall/"
