[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nvrecall"
dynamic = ["version"]
authors = [{name = "gcrtnst", email = "52910071+gcrtnst@users.noreply.github.com"}]
license = "Unlicense"
license-files = ["LICENSE"]
keywords = ["niconico", "nicovideo"]

requires-python = ">= 3.14"
dependencies = ["httpx[http2]"]

[project.urls]
source = "https://github.com/gcrtnst/nvrecall/"

[dependency-groups]
dev = ["respx", "ruff", "pyright"]

[tool.setuptools.dynamic]
version = {attr = "nvrecall.__version__"}

[tool.ruff]
exclude = []
respect-gitignore = true

[tool.ruff.lint]
select = ["F", "ANN0", "ANN2", "ANN4", "RUF1", "RUF2"]

[tool.pyright]
include = ["*.py", "src/**/*.py", "tests/**/*.py"]
extraPaths = ["src/"]
pythonPlatform = "All"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
